[package]
name = "actors"
version = "0.1.0"
authors = ["Julia Naomi <jnboeira@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.1"
actix = "0.10"
reqwest = { version = "0.10.4", features = ["blocking", "json"] }
transistor = "1.3.11"
edn-rs = "*"
edn-derive = "*"
serde = { version = "1.0.104", features = ["derive"] }
serde_derive = "1.0.104"
qrcode-generator = "4.0.3"
brcode = "1.3.1"